--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <tr>
           <th class="border p-2">Nama OPD</th>
           <th class="border p-2">Saldo Awal 2025</th>
+          <th class="border p-2">Saldo Akhir 2025</th>
           <th class="border p-2">Dokumen</th>
           <th class="border p-2">Aksi</th>
         </tr>
